# MCP-Server-Documentation-Retrieval-Web-Scraping-uv-FastMCP-

./: .env  client.py  mcp_server.py  pyproject.toml  requirments.txt  streamlit_app.py  utils.py
tests/: test_mcp_server.py
